--- a/index.html
+++ b/index.html
@@ -6,54 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio (Version 2.1)</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
-        <a href="/index.html" lang="en">WebStudio</a>
+        <a class="logo" href="/index.html" lang="en">WebStudio</a>
         <nav>
-            <ul>
-                <li><a href="">Cтудія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+            <ul class="site-nav">
+                <li class="list"><a href="./index.html" class="link current">Cтудія</a></li>
+                <li class="list"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                <li class="list"><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="list address"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="list address"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section>
-            <h1>Ефективні рішення <br>для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+            <button type="button" class="btn btn-hero">Замовити послугу</button>
         </section>
-        <section>
-            <h2>Особливості</h2>
-            <ul>
-                <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+        <section class="section">
+            <h2 class="section-title">Особливості</h2>
+            <ul class="feature-list">
+                <li class="list">
+                    <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>
                         Ідейні міркування, і навіть початок повсякденної роботи з
                         формування позиції.
                     </p>
                 </li>
-                <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                <li class="list">
+                    <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>
                         Завдання організації, особливо рамки і місце навчання кадрів тягне
                         у себе.
                     </p>
                 </li>
-                <li>
-                    <h3>ПЛАНУВАННЯ</h3>
+                <li class="list">
+                    <h3 class="title">ПЛАНУВАННЯ</h3>
                     <p>
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
-                <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <li class="list">
+                    <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>
                         Значимість цих проблем настільки очевидна, що реалізація планових
                         завдань.
@@ -61,49 +66,50 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чим ми займаємося</h2>
+        <section class="section">
+            <h2 class="section-title">Чим ми займаємося</h2>
             <img src="./images/box_1.jpg" alt="Верстка сайтів" width="370">
             <img src="./images/box_2.jpg" alt="Мобільні додатки" width="370">
             <img src="./images/box_1.jpg" alt="Графічний дизайн" width="370">
         </section>
-        <section>
-            <h2>Наша команда</h2>
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
             <ul>
-                <li>
+                <li class="list">
                     <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270">
-                    <h3>Ігор Дем'яненко</h3>
+                    <h3 class="title">Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src=" ./images/img2.jpg" alt="Ольга Рєпіна" width="270">
-                    <h3>Ольга Рєпіна</h3>
+                    <h3 class="title">Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src=" ./images/img3.jpg" alt="Микола Тарасов" width="270">
-                    <h3>Микола Тарасов</h3>
+                    <h3 class="title">Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src=" ./images/img4.jpg" alt="Михайло Єрмаков" width="270">
-                    <h3>Михайло Єрмаков</h3>
+                    <h3 class="title">Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
 
     </main>
-    <footer>
-        <a href=" /index.html" lang="en">WebStudio</a>
+    <footer class="footer">
+        <a class="logo" href=" /index.html" lang="en">WebStudio</a>
         <address>
             <ul>
-                <li>
-                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»">м. Київ, пр-т
+                <li class="list address">
+                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»" class="link">м.
+                        Київ, пр-т
                         Лесі Українки, 26</a>
                 </li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="list address"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="list address"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
