--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uk">
 
 <head>
@@ -16,22 +16,34 @@
 
 <body>
     <header>
-        <a class="logo" href="/index.html" lang="en">WebStudio</a>
+        <a class="logo link" href="/index.html" lang="en"><span class="logo-blue">Web</span>Studio</a>
         <nav>
             <ul class="site-nav">
-                <li class="list"><a href="./index.html" class="link current">Cтудія</a></li>
-                <li class="list"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                <li class="list">
+                    <a href="./index.html" class="link current">Cтудія</a>
+                </li>
+                <li class="list">
+                    <a href="./portfolio.html" class="link">Портфоліо</a>
+                </li>
                 <li class="list"><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li class="list address"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li class="list address"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li class="list address">
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="list address">
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
         </ul>
     </header>
+
     <main>
         <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+            <h1 class="hero-title">
+                Ефективні рішення для <br>
+                вашого бізнесу
+            </h1>
             <button type="button" class="btn btn-hero">Замовити послугу</button>
         </section>
         <section class="section">
@@ -74,7 +86,7 @@
         </section>
         <section class="section">
             <h2 class="section-title">Наша команда</h2>
-            <ul>
+            <ul class="team">
                 <li class="list">
                     <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270">
                     <h3 class="title">Ігор Дем'яненко</h3>
@@ -97,19 +109,22 @@
                 </li>
             </ul>
         </section>
-
     </main>
+
     <footer class="footer">
-        <a class="logo" href=" /index.html" lang="en">WebStudio</a>
+        <a class="logo link" href=" /index.html" lang="en"><span class="logo-blue">Web</span>Studio</a>
         <address>
             <ul>
-                <li class="list address">
-                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»" class="link">м.
-                        Київ, пр-т
-                        Лесі Українки, 26</a>
+                <li class="list">
+                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»"
+                        class="link address physical-address">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li class="list address"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class="list address"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="list">
+                    <a href="mailto:info@devstudio.com" class="link address">info@devstudio.com</a>
+                </li>
+                <li class="list">
+                    <a href="tel:+380961111111" class="link address">+38 096 111 11 11</a>
+                </li>
             </ul>
         </address>
     </footer>
