--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Web Studio (Version 2.1)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -13,101 +13,121 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-</head>
 
 <body>
     <header>
-        <a href="/index.html" lang="en">WebStudio</a>
+        <a class="logo link" href="/index.html" lang="en"><span class="logo-blue">Web</span>Studio</a>
         <nav>
             <ul class="site-nav">
-                <li><a href="./index.html">Cтудія</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+                <li class="list"><a href="./index.html" class="link">Cтудія</a></li>
+                <li class="list">
+                    <a href="./portfolio.html" class="link current">Портфоліо</a>
+                </li>
+                <li class="list"><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="list address">
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="list address">
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
         </ul>
     </header>
+
     <main>
-        <section>
+        <section class="section">
             <h1>Наші проєкти</h1>
             <!--Фільтр -->
-            <ul>
-                <li><button type="button" class="btn">Усі</button></li>
-                <li><button type="button" class="btn">Веб-сайт</button></li>
-                <li><button type="button" class="btn">Додаток</button></li>
-                <li><button type="button" class="btn">Дизайн</button></li>
-                <li><button type="button" class="btn">Маркетинг</button></li>
-            </ul <ul>
-            <li>
-                <a href=""><img src=" ./images/portfolio_1.jpg" alt="Технокряк" width="370">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href=""><img src=" ./images/portfolio_2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href=""><img src=" ./images/portfolio_3.jpg" alt="Ресторан Seafood" width="370">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
-                </a>
-            </li>
-            <li>
-                <a href=""><img src=" ./images/portfolio_4.jpg" alt="Проєкт Prime" width="370">
-                    <h3>Проєкт Prime</h3>
-                    <p>Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href=""><img src=" ./images/portfolio_5.jpg" alt="Проєкт Boxes" width="370">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
-                </a>
-            </li>
-            <li>
-                <a href=""><img src=" ./images/portfolio_6.jpg" alt="Inspiration has no Borders" width="370">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href=""><img src=" ./images/portfolio_7.jpg" alt="Видання Limited Edition" width="370">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href=""><img src=" ./images/portfolio_8.jpg" alt="Проєкт LAB" width="370">
-                    <h2>Проєкт LAB</h2>
-                    <p>Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href=""><img src=" ./images/portfolio_9.jpg" alt="Growing Business" width="370">
-                    <h2>Growing Business</h2>
-                    <p>Додаток</p>
-                </a>
-            </li>
+            <ul class="filter">
+                <li class="list"><button type="button" class="btn">Усі</button></li>
+                <li class="list">
+                    <button type="button" class="btn">Веб-сайт</button>
+                </li>
+                <li class="list">
+                    <button type="button" class="btn">Додаток</button>
+                </li>
+                <li class="list">
+                    <button type="button" class="btn">Дизайн</button>
+                </li>
+                <li class="list">
+                    <button type="button" class="btn">Маркетинг</button>
+                </li>
+            </ul>
+            <ul class="project-list">
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_1.jpg" alt="Технокряк" width="370">
+                        <h2 class="title">Технокряк</h2>
+                        <p class="text">Веб-сайт</p>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                        <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                        <p class="text">Дизайн</p>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_3.jpg" alt="Ресторан Seafood" width="370">
+                        <h2 class="title">Ресторан Seafood</h2>
+                        <p class="text">Додаток</p>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_4.jpg" alt="Проєкт Prime" width="370">
+                        <h2 class="title">Проєкт Prime</h2>
+                        <p class="text">Маркетинг</p>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_5.jpg" alt="Проєкт Boxes" width="370">
+                        <h2 class="title">Проєкт Boxes</h2>
+                        <p class="text">Додаток</p>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_6.jpg" alt="Inspiration has no Borders" width="370">
+                        <h2 class="title">Inspiration has no Borders</h2>
+                        <p class="text">Веб-сайт</p>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_7.jpg" alt="Видання Limited Edition" width="370">
+                        <h2 class="title">Видання Limited Edition</h2>
+                        <p class="text">Дизайн</p>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_8.jpg" alt="Проєкт LAB" width="370">
+                        <h2 class="title">Проєкт LAB</h2>
+                        <p class="text">Дизайн</p>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href=""><img src=" ./images/portfolio_9.jpg" alt="Growing Business" width="370" <h2
+                            class="title">Growing Business</h2>
+                        <p class="text">Додаток</p>
+                    </a>
+                </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href=" /index.html" lang="en">WebStudio</a>
+
+    <footer class="footer">
+        <a class="logo link" href=" /index.html" lang="en"><span class="logo-blue">Web</span>Studio</a>
         <address>
             <ul>
-                <li>
-                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»">м. Київ, пр-т
-                        Лесі Українки, 26</a>
+                <li class="list">
+                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»"
+                        class="link address physical-address">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="list">
+                    <a href="mailto:info@devstudio.com" class="link address">info@devstudio.com</a>
+                </li>
+                <li class="list">
+                    <a href="tel:+380961111111" class="link address">+38 096 111 11 11</a>
+                </li>
             </ul>
         </address>
     </footer>
