Fixed some mistakes in html

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,8 +105,8 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href=""><img src=" ./images/portfolio_9.jpg" alt="Growing Business" width="370" <h2
-                            class="title">Growing Business</h2>
+                    <a href=""><img src=" ./images/portfolio_9.jpg" alt="Growing Business" width="370">
+                        <h2 class="title">Growing Business</h2>
                         <p class="text">Додаток</p>
                     </a>
                 </li>
