Changes to class names

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <a class="logo link" href="/index.html" lang="en"><span class="logo-blue">Web</span>Studio</a>
+        <a class="logo link" href="/index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
         <nav>
             <ul class="site-nav">
                 <li class="list"><a href="./index.html" class="link">Cтудія</a></li>
@@ -115,12 +115,12 @@
     </main>
 
     <footer class="footer">
-        <a class="logo link" href=" /index.html" lang="en"><span class="logo-blue">Web</span>Studio</a>
+        <a class="logo link" href=" /index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
         <address>
             <ul>
                 <li class="list">
                     <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»"
-                        class="link address physical-address">м. Київ, пр-т Лесі Українки, 26</a>
+                        class="link address street-address">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li class="list">
                     <a href="mailto:info@devstudio.com" class="link address">info@devstudio.com</a>
