--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 
 <body>
     <header>
-        <a class="logo link" href="/index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
+        <a class="logo link" href="./index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
         <nav>
             <ul class="site-nav">
-                <li class="list">
+                <li class="item">
                     <a href="./index.html" class="link current">Cтудія</a>
                 </li>
-                <li class="list">
+                <li class="item">
                     <a href="./portfolio.html" class="link">Портфоліо</a>
                 </li>
-                <li class="list"><a href="" class="link">Контакти</a></li>
+                <li class="item"><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li class="list address">
+            <li class="item address">
                 <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
             </li>
-            <li class="list address">
+            <li class="item address">
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
         </ul>
@@ -49,27 +49,27 @@
         <section class="section">
             <h2 class="section-title">Особливості</h2>
             <ul class="feature-list">
-                <li class="list">
+                <li class="item">
                     <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>
                         Ідейні міркування, і навіть початок повсякденної роботи з
                         формування позиції.
                     </p>
                 </li>
-                <li class="list">
+                <li class="item">
                     <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>
                         Завдання організації, особливо рамки і місце навчання кадрів тягне
                         у себе.
                     </p>
                 </li>
-                <li class="list">
+                <li class="item">
                     <h3 class="title">ПЛАНУВАННЯ</h3>
                     <p>
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
-                <li class="list">
+                <li class="item">
                     <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>
                         Значимість цих проблем настільки очевидна, що реалізація планових
@@ -80,30 +80,30 @@
         </section>
         <section class="section">
             <h2 class="section-title">Чим ми займаємося</h2>
-            <img src="./images/box_1.jpg" alt="Верстка сайтів" width="370">
-            <img src="./images/box_2.jpg" alt="Мобільні додатки" width="370">
-            <img src="./images/box_1.jpg" alt="Графічний дизайн" width="370">
+            <img src="./images/tasks/box_1.jpg" alt="Верстка сайтів" width="370" height="294">
+            <img src="./images/tasks/box_2.jpg" alt="Мобільні додатки" width="370" height="294">
+            <img src="./images/tasks/box_1.jpg" alt="Графічний дизайн" width="370" height="294">
         </section>
         <section class="section">
             <h2 class="section-title">Наша команда</h2>
             <ul class="team">
-                <li class="list">
-                    <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270">
+                <li class="item">
+                    <img src="./images/team/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
                     <h3 class="title">Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
-                <li class="list">
-                    <img src=" ./images/img2.jpg" alt="Ольга Рєпіна" width="270">
+                <li class="item">
+                    <img src=" ./images/team/img2.jpg" alt="Ольга Рєпіна" width="270" height="260">
                     <h3 class="title">Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li class="list">
-                    <img src=" ./images/img3.jpg" alt="Микола Тарасов" width="270">
+                <li class="item">
+                    <img src=" ./images/team/img3.jpg" alt="Микола Тарасов" width="270" height="260">
                     <h3 class="title">Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
-                <li class="list">
-                    <img src=" ./images/img4.jpg" alt="Михайло Єрмаков" width="270">
+                <li class="item">
+                    <img src=" ./images/team/img4.jpg" alt="Михайло Єрмаков" width="270" height="260">
                     <h3 class="title">Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -112,17 +112,17 @@
     </main>
 
     <footer class="footer">
-        <a class="logo link" href=" /index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
+        <a class="logo link" href=" ./index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
         <address>
             <ul>
-                <li class="list">
-                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»"
+                <li class="item">
+                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="_blank" rel="noopener noreferrer"
                         class="link address street-address">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li class="list">
+                <li class="item">
                     <a href="mailto:info@devstudio.com" class="link address">info@devstudio.com</a>
                 </li>
-                <li class="list">
+                <li class="item">
                     <a href="tel:+380961111111" class="link address">+38 096 111 11 11</a>
                 </li>
             </ul>
