--- a/portfolio.html
+++ b/portfolio.html
@@ -16,21 +16,21 @@
 
 <body>
     <header>
-        <a class="logo link" href="/index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
+        <a class="logo link" href="./index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
         <nav>
             <ul class="site-nav">
-                <li class="list"><a href="./index.html" class="link">Cтудія</a></li>
-                <li class="list">
+                <li class="item"><a href="./index.html" class="link">Cтудія</a></li>
+                <li class="item">
                     <a href="./portfolio.html" class="link current">Портфоліо</a>
                 </li>
-                <li class="list"><a href="" class="link">Контакти</a></li>
+                <li class="item"><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li class="list address">
+            <li class="item address">
                 <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
             </li>
-            <li class="list address">
+            <li class="item address">
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
         </ul>
@@ -41,71 +41,78 @@
             <h1>Наші проєкти</h1>
             <!--Фільтр -->
             <ul class="filter">
-                <li class="list"><button type="button" class="btn">Усі</button></li>
-                <li class="list">
+                <li class="item"><button type="button" class="btn">Усі</button></li>
+                <li class="item">
                     <button type="button" class="btn">Веб-сайт</button>
                 </li>
-                <li class="list">
+                <li class="item">
                     <button type="button" class="btn">Додаток</button>
                 </li>
-                <li class="list">
+                <li class="item">
                     <button type="button" class="btn">Дизайн</button>
                 </li>
-                <li class="list">
+                <li class="item">
                     <button type="button" class="btn">Маркетинг</button>
                 </li>
             </ul>
             <ul class="project-list">
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_1.jpg" alt="Технокряк" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_1.jpg" alt="Технокряк" width="370">
                         <h2 class="title">Технокряк</h2>
                         <p class="text">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_2.jpg" alt="Постер New Orlean vs Golden Star"
+                            width="370" height="294">
                         <h2 class="title">Постер New Orlean vs Golden Star</h2>
                         <p class="text">Дизайн</p>
                     </a>
                 </li>
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_3.jpg" alt="Ресторан Seafood" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_3.jpg" alt="Ресторан Seafood" width="370"
+                            height="294">
                         <h2 class="title">Ресторан Seafood</h2>
                         <p class="text">Додаток</p>
                     </a>
                 </li>
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_4.jpg" alt="Проєкт Prime" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_4.jpg" alt="Проєкт Prime" width="370"
+                            height="294">
                         <h2 class="title">Проєкт Prime</h2>
                         <p class="text">Маркетинг</p>
                     </a>
                 </li>
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_5.jpg" alt="Проєкт Boxes" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_5.jpg" alt="Проєкт Boxes" width="370"
+                            height="294">
                         <h2 class="title">Проєкт Boxes</h2>
                         <p class="text">Додаток</p>
                     </a>
                 </li>
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_6.jpg" alt="Inspiration has no Borders" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_6.jpg" alt="Inspiration has no Borders"
+                            width="370" height="294">
                         <h2 class="title">Inspiration has no Borders</h2>
                         <p class="text">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_7.jpg" alt="Видання Limited Edition" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_7.jpg" alt="Видання Limited Edition" width="370"
+                            height="294">
                         <h2 class="title">Видання Limited Edition</h2>
                         <p class="text">Дизайн</p>
                     </a>
                 </li>
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_8.jpg" alt="Проєкт LAB" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_8.jpg" alt="Проєкт LAB" width="370" height="294">
                         <h2 class="title">Проєкт LAB</h2>
                         <p class="text">Дизайн</p>
                     </a>
                 </li>
-                <li class="list">
-                    <a href=""><img src=" ./images/portfolio_9.jpg" alt="Growing Business" width="370">
+                <li class="item">
+                    <a href=""><img src=" ./images/projects/portfolio_9.jpg" alt="Growing Business" width="370"
+                            height="294">
                         <h2 class="title">Growing Business</h2>
                         <p class="text">Додаток</p>
                     </a>
@@ -115,17 +122,17 @@
     </main>
 
     <footer class="footer">
-        <a class="logo link" href=" /index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
+        <a class="logo link" href=" ./index.html" lang="en"><span class="logo-accent">Web</span>Studio</a>
         <address>
             <ul>
-                <li class="list">
-                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»"
+                <li class="item">
+                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="_blank" rel="noopener noreferrer"
                         class="link address street-address">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li class="list">
+                <li class="item">
                     <a href="mailto:info@devstudio.com" class="link address">info@devstudio.com</a>
                 </li>
-                <li class="list">
+                <li class="item">
                     <a href="tel:+380961111111" class="link address">+38 096 111 11 11</a>
                 </li>
             </ul>
